add recieve order R logic
